--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,6 @@ add_executable(vector_range_based ch11/vector/vector_range_based.cpp)
 add_executable(list_basic ch11/list/list_basic.cpp)
 add_executable(deque_basic ch11/deque/deque_basic.cpp)
 add_executable(set_basic ch11/set/set_basic.cpp)
+add_executable(map_basic ch11/map/map_basic.cpp)
+add_executable(map_empty_caution ch11/map/map_empty_caution.cpp)
+add_executable(map_empty_find ch11/map/map_empty_find.cpp)
